# media-hub

./: CMakeLists.txt  README  snapcraft.yaml  symbols.map
cmake/: EnableCoverageReport.cmake
debian/: bileto_pre_release_hook  changelog  control  control.in  copyright  gen-debian-files.sh  get-versions.sh  libmedia-hub-client0.install  libmedia-hub-client0.symbols  libmedia-hub-client0.symbols.amd64  libmedia-hub-client0.symbols.armhf  libmedia-hub-client0.symbols.i386  libmedia-hub-common0.symbols  libmedia-hub-common1.install  libmedia-hub-common1.symbols  libmedia-hub-common2.symbols  libmedia-hub-common3.symbols  libmedia-hub-dev.install  libmedia-hub-doc.install  libmedia-hub-doc.lintian-overrides  libmedia-hub-qt-dev.install  libmedia-hub-qt.install  media-hub.conf  media-hub.install  media-hub.lintian-overrides  rules  usr.bin.media-hub-server
doc/: CMakeLists.txt  Doxyfile.in
docs/: index.md
include/: CMakeLists.txt
include/com/ubuntu/music/: connection.h  player.h  property.h  service.h  signal.h  track.h  track_list.h
include/core/media/: connection.h  player.h  property.h  service.h  signal.h  track.h  track_list.h
include/core/media/video/: dimensions.h  sink.h
overlay/: snappyenv
src/: CMakeLists.txt
src/com/ubuntu/: CMakeLists.txt
src/com/ubuntu/music/: CMakeLists.txt  connection.cpp  connection_private.h  engine.h  player.cpp  player_configuration.h  player_implementation.cpp  player_skeleton.cpp  player_skeleton.h  player_stub.cpp  player_stub.h  player_traits.h  property_stub.h  service.cpp  service_implementation.cpp  service_implementation.h  service_skeleton.cpp  service_skeleton.h  service_stub.cpp  service_stub.h  service_traits.h  the_session_bus.h  track.cpp  track_id.h  track_list.cpp  track_list_implementation.cpp  track_list_implementation.h  track_list_skeleton.cpp  track_list_skeleton.h  track_list_stub.cpp  track_list_stub.h
src/com/ubuntu/music/gstreamer/: bus.h  engine.cpp  engine.h  meta_data_extractor.h  playbin.h
src/com/ubuntu/music/mpris/: macros.h  player.h  service.h  track_list.h
src/core/media/: CMakeLists.txt  apparmor.h  backend.cpp  backend.h  client_death_observer.cpp  client_death_observer.h  client_death_observer_p.h  codec.h  connection.cpp  connection_private.h  cover_art_resolver.cpp  cover_art_resolver.h  dbus_client_death_observer.cpp  dbus_client_death_observer.h  dbus_property_notifier.cpp  dbus_property_notifier.h  engine.cpp  engine.h  external_services.h  hashed_keyed_player_store.cpp  hashed_keyed_player_store.h  hybris_client_death_observer.cpp  hybris_client_death_observer.h  hybris_recorder_observer.cpp  hybris_recorder_observer.h  indicator_power_service.h  keyed_player_store.h  logging.cpp  logging.h  metadata.cpp  mpris.h  non_copyable.h  null_track_list.h  player.cpp  player.h  player_configuration.h  player_implementation.cpp  player_implementation.h  player_skeleton.cpp  player_skeleton.h  (+35 more)
src/core/media/apparmor/: context.cpp  context.h  dbus.h  ubuntu.cpp  ubuntu.h
src/core/media/audio/: ostream_reporter.cpp  ostream_reporter.h  output_observer.cpp  output_observer.h  output_observer_p.h  pulse_audio_output_observer.cpp  pulse_audio_output_observer.h
src/core/media/call-monitor/: call_monitor.cpp  call_monitor.h
src/core/media/gstreamer/: bus.h  engine.cpp  engine.h  meta_data_extractor.h  meta_data_support.cpp  meta_data_support.h  playbin.cpp  playbin.h
src/core/media/logger/: logger.cpp  logger.h
src/core/media/mpris/: macros.h  media_player2.cpp  media_player2.h  metadata.h  player.h  playlists.h  service.h  track_list.h
src/core/media/power/: battery_observer.cpp  battery_observer.h  state_controller.cpp  state_controller.h
src/core/media/server/: server.cpp
src/core/media/telephony/: CMakeLists.txt  call_monitor.cpp  call_monitor.h  qtbridge.cpp
src/core/media/util/: timeout.h  uri_check.h  utils.cpp  utils.h
src/core/media/video/: egl_sink.cpp  egl_sink.h  hybris_gl_sink.cpp  hybris_gl_sink.h  platform_default_sink.cpp  platform_default_sink.h  socket_types.h
src/lib/MediaHub/: CMakeLists.txt  MediaHub.pc.in  Track  TrackList  VideoSink  dbus_constants.h  dbus_utils.cpp  dbus_utils.h  egl_video_sink.cpp  egl_video_sink.h  error.cpp  error.h  error_p.h  global.h  hybris_video_sink.cpp  hybris_video_sink.h  player.cpp  player.h  socket_types.h  track.h  track_list.cpp  track_list.h  track_list_p.h  video_sink.cpp  video_sink.h  video_sink_p.h
tests/: CMakeLists.txt  cross_process_sync.cpp  cross_process_sync.h  fork_and_run.h  test_data.cpp.in  test_data.h  waitable_state_transition.h
tests/acceptance-tests/: CMakeLists.txt  service.cpp
tests/lib/functional/: CMakeLists.txt  dbusmock.h  media-hub.py  test_client.cpp
tests/lib/unit/: CMakeLists.txt  test_error.cpp
tests/service/data/: small.ogv
tests/service/functional/: CMakeLists.txt  HttpServer.py  MediaHub.py  conftest.py  media_client.py  test_media_hub_service.py
tests/test-track-list/: CMakeLists.txt  test_track_list.cpp  test_track_list.h
tests/unit-tests/: CMakeLists.txt  libmedia-mock.cpp  mongoose.c  test-gstreamer-engine.cpp  test-player-store.cpp  web_server.h
